# SearchEngine

./: .gitignore  CMakeLists.txt
include/: CandidateResult.h  Configuration.h  DictProducer.h  Dictionary.h  DirScanner.h  KeyRecommender.h  PageLib.h  PageLibPreprocessor.h  SearchEngineServer.h  SplitTool.h  SplitToolCppJieba.h  WebInfo.h  WebPage.h  WebPageQuery.h
include/cppjieba/: DictTrie.hpp  FullSegment.hpp  HMMModel.hpp  MPSegment.hpp  MixSegment.hpp  PosTagger.hpp  PreFilter.hpp  QuerySegment.hpp  SegmentBase.hpp  Trie.hpp  Unicode.hpp
jiebaTest/: Jsontest.cc  jiebaExample  jiebaExample.cc  jsontest  simhashExample  simhashExample.cc  testSimHash.cc  testjiebaSource.cc
src/: CandidateResult.cc  Configuration.cc  DictProducer.cc  Dictionary.cc  DirScanner.cc  KeyRecommender.cc  PageLib.cc  PageLibPreprocessor.cc  SearchEngineServer.cc  SplitTool.cc  SplitToolCppJieba.cc  WebInfo.cc  WebPage.cpp  WebPageQuery.cc
test/: Server.cc  testBuildDict.cc  testEditDistance.cc  testJieBa.cc  testReadInvert.cc  testServer.cc  testWebSearchModel.cc  testXML.cc
